--- a/Launcher/Launcher/My Project/Resources.nl.resx
+++ b/Launcher/Launcher/My Project/Resources.nl.resx
@@ -117,17 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="cat_paw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cat_paw.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="rollercoaster_tycoon_2_001" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rollercoaster_tycoon_2_001.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="frmLauncher_launchGame_updateMessage" xml:space="preserve">
-    <value>Updating due to Missing Files...</value>
+    <value>Updaten vanwege missende bestanden...</value>
   </data>
   <data name="frmLauncher_Load_neverRun" xml:space="preserve">
-    <value>Have you installed and ran RCT2 at least once? If not, then please do so and try again.</value>
+    <value>Heb je RCT2 geïnstalleerd en gestart? Zo nee, doe dat en probeer het opnieuw</value>
   </data>
 </root>
