--- a/Launcher/Launcher/My Project/Resources.resx
+++ b/Launcher/Launcher/My Project/Resources.resx
@@ -130,4 +130,82 @@
   <data name="frmLauncher_Load_neverRun" xml:space="preserve">
     <value>Have you installed and ran RCT2 at least once? If not, then please do so and try again.</value>
   </data>
+  <data name="frmLauncher_updateStateMessage_updating" xml:space="preserve">
+    <value>Updating...</value>
+  </data>
+  <data name="frmLauncher_updateStateMessage_uptodate" xml:space="preserve">
+    <value>Up to Date!</value>
+  </data>
+  <data name="frmLauncher_launchGame_RCT2NotFound" xml:space="preserve">
+    <value>OpenRCT2 not installed or not found! Downloading. When it is done, feel free to press play again.</value>
+  </data>
+  <data name="frmLauncher_update_forceUpdate" xml:space="preserve">
+    <value>Force updating...</value>
+  </data>
+  <data name="frmLauncher_updateStatus_baseText" xml:space="preserve">
+    <value>Checking if you are up to date...</value>
+  </data>
+  <data name="frmLauncher_launchGameButton_text" xml:space="preserve">
+    <value>Launch OpenRCT2</value>
+  </data>
+  <data name="frmLauncher_forceUpdateButton_text" xml:space="preserve">
+    <value>Force Update</value>
+  </data>
+  <data name="frmLauncher_verboseOutputButton_text" xml:space="preserve">
+    <value>Verbose Output</value>
+  </data>
+  <data name="frmLauncher_extrasButton_text" xml:space="preserve">
+    <value>Extra's</value>
+  </data>
+  <data name="frmLauncher_logButton_text" xml:space="preserve">
+    <value>Log Output to File</value>
+  </data>
+  <data name="frmLauncher_title" xml:space="preserve">
+    <value>OpenRCT2 Launcher</value>
+  </data>
+  <data name="extras_setupReg_noRegisterKeys" xml:space="preserve">
+    <value>The launcher could not find the registry keys. Do you have Both RCT1 &amp; RCT2 Installed? If you do, please open an issue on GitHub.</value>
+  </data>
+  <data name="extras_cdSoundtrack_firstWarning_text" xml:space="preserve">
+    <value>If you are using a CD to run RollerCoaster Tycoon 1, Please insert it now.</value>
+  </data>
+  <data name="extras_cdSoundtrack_firstWarning_title" xml:space="preserve">
+    <value>Please Insert RCT 1 CD</value>
+  </data>
+  <data name="extras_cdSoundtrack_failed_text" xml:space="preserve">
+    <value>Failed to copy file - Do you have the CD inserted and the game installed?
+
+Exact Error:
+</value>
+  </data>
+  <data name="common_errorOccurred" xml:space="preserve">
+    <value>An Error has occured!</value>
+  </data>
+  <data name="extras_cdSoundtrack_done_text" xml:space="preserve">
+    <value>Done! You're all good to go!</value>
+  </data>
+  <data name="common_complete" xml:space="preserve">
+    <value>Complete</value>
+  </data>
+  <data name="extras_fileSoundtrack_hint" xml:space="preserve">
+    <value>The file you are looking for is CSS17.dat</value>
+  </data>
+  <data name="extras_fileSoundtrack_noFileSelected" xml:space="preserve">
+    <value>No file selected.</value>
+  </data>
+  <data name="extras_syncDropbox_notInstalled" xml:space="preserve">
+    <value>Sorry, I don't think you have Dropbox Installed.</value>
+  </data>
+  <data name="extras_syncDropbox_firstWarning_text" xml:space="preserve">
+    <value>Are you sure you want to move your Saves to Dropbox?</value>
+  </data>
+  <data name="extras_syncDropbox_firstWarning_title" xml:space="preserve">
+    <value>Move Saves?</value>
+  </data>
+  <data name="extras_syncDropbox_moved_text" xml:space="preserve">
+    <value>Saves moved to Dropbox and Linked!</value>
+  </data>
+  <data name="extras_syncDropbox_moved_title" xml:space="preserve">
+    <value>Saves Moved!</value>
+  </data>
 </root>
