--- a/Launcher/Launcher/My Project/Resources.nl.resx
+++ b/Launcher/Launcher/My Project/Resources.nl.resx
@@ -424,7 +424,7 @@ Precieze foutmelding:
     <value>Opgeslagen parken uploaden</value>
   </data>
   <data name="OpenRCTdotNetConfigure_title" xml:space="preserve">
-    <value>OpenRCT.net-configuration</value>
+    <value>OpenRCT.net-configuratie</value>
   </data>
   <data name="coomon_login" xml:space="preserve">
     <value>Aanmelden</value>
