--- a/Launcher/Launcher/My Project/Resources.resx
+++ b/Launcher/Launcher/My Project/Resources.resx
@@ -468,4 +468,7 @@ make sure your saves are syncronized.</value>
   <data name="login_screen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_screen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FixingPermissionsTitle" xml:space="preserve">
+    <value>Fixing Permissions</value>
+  </data>
 </root>
